--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		img{
 			width: 400px;
 			height: 350px;
-			margin-left: 35%;
+			margin-left: auto;
+			margin-right: auto;
 			width: 30%;
 		}
 		h2{
